src/objects/CP_Projects__c.object
<CustomObject>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CP1: Inception</fullName>
                </value>
                <value>
                    <fullName>CP2: Discovery</fullName>
                </value>
                <value>
                    <fullName>CP3: Implementation</fullName>
                </value>
                <value>
                    <fullName>CP4: Customer Readiness</fullName>
                </value>
                <value>
                    <fullName>CP5: Stabilize</fullName>
                </value>
                <value>
                    <fullName>CP6: Transition</fullName>
                </value>
                <value>
                    <fullName>Stage 5 - Complete</fullName>
                    <isActive>false</isActive>
                    <label>Stage 10 - Complete</label>
                </value>
                <value>
                    <fullName>Stage 1 –  Inception</fullName>
                    <isActive>false</isActive>
                    <label>Stage 6 –  Inception</label>
                </value>
                <value>
                    <fullName>Stage 2 –  Implementation</fullName>
                    <isActive>false</isActive>
                    <label>Stage 7 –  Implementation</label>
                </value>
                <value>
                    <fullName>Stage 3 –  Stabilization</fullName>
                    <isActive>false</isActive>
                    <label>Stage 8 –  Stabilization</label>
                </value>
                <value>
                    <fullName>Stage 4 –  Ramp to BAU</fullName>
                    <isActive>false</isActive>
                    <label>Stage 9 –  Ramp to BAU</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statement_of_Work_Sent_to_Client__c</fullName>
        <description>Date on which SOW was emailed to Client</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date on which SOW was emailed to Client</inlineHelpText>
        <label>Statement of Work Sent to Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Statement_of_Work_Signed__c</fullName>
        <description>Date on which Client approval of SOW was received</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date on which Client approval of SOW was received</inlineHelpText>
        <label>Statement of Work Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stalled</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed_Lost</fullName>
                    <label>Closed/Lost</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Testing_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Testing - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Testing - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Testing - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Complete_Customer_Readiness__c</fullName>
        <label>Total Hours Complete Customer Readiness</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_to_Complete_Discovery__c</fullName>
        <description>Field to collect time in 30 minute segment to reflect work time within the Discovery phase</description>
        <inlineHelpText>Field to collect time in 30 minute segment to reflect work time within the Discovery phase</inlineHelpText>
        <label>Total Hours to Complete Discovery</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_to_Complete_Implementation__c</fullName>
        <description>Field to collect time in 30 minute segment to reflect work time within the Implementation phase</description>
        <inlineHelpText>Field to collect time in 30 minute segment to reflect work time within the Implementation phase</inlineHelpText>
        <label>Total Hours to Complete Implementation</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_to_Complete_Stabilization__c</fullName>
        <description>Field to collect time in 30 minute segment to reflect work time within the Stabilization phase</description>
        <inlineHelpText>Field to collect time in 30 minute segment to reflect work time within the Stabilization phase</inlineHelpText>
        <label>Total Hours to Complete Stabilization</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Complete__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training - Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Due__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training - Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Kickoff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date</inlineHelpText>
        <label>Training - Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Required__c</fullName>
        <description>Has the customer requested training</description>
        <inlineHelpText>Has the customer requested training</inlineHelpText>
        <label>Training Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transition_Duration_Days__c</fullName>
        <formula>Handover_Actual__c -  Billing_Cycles_Successfully_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Handover Actual - Two Billing Cycles Successfully Complete</inlineHelpText>
        <label>Transition Duration Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WF_Approval_Submitted__c</fullName>
        <description>Used to kick the record out of being locked</description>
        <encryptionScheme>None</encryptionScheme>
        <label>WF Approval Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X3rd_Party_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Party Integration</label>
        <type>Checkbox</type>
    </fields>
    <label>CP Projects</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Handover_Kickoff__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Handover_Actual__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_CP_Projects</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My CP Projects</label>
    </listViews>
    <listViews>
        <fullName>Non_OBM_Projects</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Current_Milestone__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CP_Projects__c.Non_OBM_Projects</value>
        </filters>
        <label>Non-OBM Projects</label>
    </listViews>
    <listViews>
        <fullName>OBM_Projects</fullName>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Current_Milestone__c</columns>
        <columns>Stage__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CP_Projects__c.OBM_Projects</value>
        </filters>
        <label>OBM Projects</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CP Projects</pluralLabel>
    <recordTypes>
        <fullName>Non_OBM_Projects</fullName>
        <active>true</active>
        <label>Non OBM Projects</label>
    </recordTypes>
    <recordTypes>
        <fullName>OBM_Projects</fullName>
        <active>true</active>
        <label>OBM Projects</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Billing_Cycle_Success_Reqd_Stage_CP6</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
/* 
Custom Setting - WE Validation Rules Controller - allows rule to be deactivated when the setting is changed 
*/ 
$Setup.WE_VRC__c.All_Opportunity_Disabled__c = FALSE, 
/* 
Custom Setting - WE Validation Rules Controller - allows rule for non forecast field to be deactivated 
*/ 
$Setup.WE_VRC__c.Non_Fcst_Disabled__c = FALSE, 

ISPICKVAL(Stage__c, &quot;CP6: Transition&quot;),

ISBLANK( Billing_Cycles_Successfully_Complete__c ) 
)</errorConditionFormula>
        <errorDisplayField>Billing_Cycles_Successfully_Complete__c</errorDisplayField>
        <errorMessage>Billing Cycles must be filled in before moving to Stage CP6 or beyond</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Customer_Readiness_Required_Stage_CP5</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
/* 
Custom Setting - WE Validation Rules Controller - allows rule to be deactivated when the setting is changed 
*/ 
$Setup.WE_VRC__c.All_Opportunity_Disabled__c = FALSE, 
/* 
Custom Setting - WE Validation Rules Controller - allows rule for non forecast field to be deactivated 
*/ 
$Setup.WE_VRC__c.Non_Fcst_Disabled__c = FALSE, 

OR( 
ISPICKVAL(Stage__c, &quot;CP5: Stabilize&quot;),
ISPICKVAL(Stage__c, &quot;CP6: Transition&quot;)), 

ISBLANK(  Customer_Readiness_Complete__c ) 
)</errorConditionFormula>
        <errorDisplayField>Customer_Readiness_Complete__c</errorDisplayField>
        <errorMessage>Customer Readiness Complete must be filled in before moving to Stage CP5 or beyond</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Implementation_Complete_Reqd_Stage_CP4</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
/* 
Custom Setting - WE Validation Rules Controller - allows rule to be deactivated when the setting is changed 
*/ 
$Setup.WE_VRC__c.All_Opportunity_Disabled__c = FALSE, 
/* 
Custom Setting - WE Validation Rules Controller - allows rule for non forecast field to be deactivated 
*/ 
$Setup.WE_VRC__c.Non_Fcst_Disabled__c = FALSE, 

OR( 
ISPICKVAL(Stage__c, &quot;CP4: Customer Readiness&quot;),
ISPICKVAL(Stage__c, &quot;CP5: Stabilize&quot;),
ISPICKVAL(Stage__c, &quot;CP6: Transition&quot;)), 

ISBLANK( Implementation_Complete__c ) 
)</errorConditionFormula>
        <errorDisplayField>Implementation_Complete__c</errorDisplayField>
        <errorMessage>Implementation Complete must be filled in before moving to Stage CP4 or beyond</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inception_Complete_Required_Stage_CP2</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
/* 
Custom Setting - WE Validation Rules Controller - allows rule to be deactivated when the setting is changed 
*/ 
$Setup.WE_VRC__c.All_Opportunity_Disabled__c = FALSE, 
/* 
Custom Setting - WE Validation Rules Controller - allows rule for non forecast field to be deactivated 
*/ 
$Setup.WE_VRC__c.Non_Fcst_Disabled__c = FALSE, 

OR( 
ISPICKVAL(Stage__c, &quot;CP2: Discovery&quot;), 
ISPICKVAL(Stage__c, &quot;CP3: Implementation&quot;), 
ISPICKVAL(Stage__c, &quot;CP4: Customer Readiness&quot;),
ISPICKVAL(Stage__c, &quot;CP5: Stabilize&quot;),
ISPICKVAL(Stage__c, &quot;CP6: Transition&quot;)), 

ISBLANK(Inception_Complete__c ) 
)</errorConditionFormula>
        <errorDisplayField>Inception_Complete__c</errorDisplayField>
        <errorMessage>Inception Complete must be filled in before moving to Stage CP2 or beyond</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ready_Implementation_Required_Stage_CP3</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
/* 
Custom Setting - WE Validation Rules Controller - allows rule to be deactivated when the setting is changed 
*/ 
$Setup.WE_VRC__c.All_Opportunity_Disabled__c = FALSE, 
/* 
Custom Setting - WE Validation Rules Controller - allows rule for non forecast field to be deactivated 
*/ 
$Setup.WE_VRC__c.Non_Fcst_Disabled__c = FALSE, 

OR( 
ISPICKVAL(Stage__c, &quot;CP3: Implementation&quot;), 
ISPICKVAL(Stage__c, &quot;CP4: Customer Readiness&quot;),
ISPICKVAL(Stage__c, &quot;CP5: Stabilize&quot;),
ISPICKVAL(Stage__c, &quot;CP6: Transition&quot;)), 

ISBLANK( Ready_To_Move_Into_Implementation__c ) 
)</errorConditionFormula>
        <errorDisplayField>Ready_To_Move_Into_Implementation__c</errorDisplayField>
        <errorMessage>Ready to Move Into Implementation must be filled in before moving to Stage CP3 or beyond</errorMessage>
    </validationRules>
</CustomObject>